finishe lg befor one

--- a/appinfo.json
+++ b/appinfo.json
@@ -10,11 +10,11 @@
     "appDescription": "This is an app tagline",
     "bgColor": "red",
     "iconColor": "red",
-    "bgImage": "./images/mainImgTv.png",
+    "bgImage": "./images/loadingImg.gif",
     "closeOnRotation": false,
     "disableBackHistoryAPI": false,
     "handlesRelaunch": false,
-    "splashBackground": "./images/loadingImg.png",
+    "splashBackground": "./images/loadingImg.gif",
     "splashColor": "#111111",
     "splashFitModeOnPortrait": "width",
     "requiredMemory": 20,
